fix documentation for internal server error
